--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <!-- NAVIGATION -->
       <div class="nav">
         <nav>
-          <span><a href="#">Mission</a></span>
-          <span><a href="#">Featured Tea</a></span>
-          <span><a href="#">Locations</a></span>
+          <span><a href="#mission">Mission</a></span>
+          <span><a href="#totm">Featured Tea</a></span>
+          <span><a href="#locations">Locations</a></span>
         </nav>
       </div>
     </div>
@@ -28,7 +28,7 @@
     <div class="pagecontent">
 
       <!-- MISSION START -->
-      <div class="mission">
+      <div class="mission" id="mission">
         <div class="textbox">
           <h2>Our Mission</h2>
           <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
@@ -37,7 +37,7 @@
       <!-- MISSION END -->
 
       <!-- TEA OF THE MONTH START -->
-      <div class="totm">
+      <div class="totm" id="totm">
         <h2>Tea of the Month</h2>
         <h4>What's Steeping at The Tea Cozy?</h4>
         <!-- TOTM PICTURES -->
@@ -67,7 +67,7 @@
       <!-- TEA OF THE MONTH END -->
 
       <!-- LOCATIONS START -->
-      <div class="locations">
+      <div class="locations" id="locations">
         <h2>Locations</h2>
         <div class="locacontainer">
           <div class="locabox">
